fixing overflow

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -12,7 +12,6 @@ body {
     padding: 0;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    overflow: hidden;
 }
 
 /* Estilo da classe main */
